# SB2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
godotproject/: Attack.gd  Character.gd  Health.gd  Title.gd  battle_page.gd  battle_page.tscn  battlefield.png.import  character.png.import  character.tscn  character_badbillygruff.png.import  character_mask.png.import  frame.png.import  icon.svg.import  project.godot  shop.png.import  stattext.tres
godotproject/cpp/: CMakeLists.txt
godotproject/cpp/src/: movement.cpp  movement.h
include/: character.h  character_defs.h  effect.h  effectmanager.h  fight.h  gdextension_bindings.h  player.h  rng.h  trigger.h
src/: character.cpp  effect.cpp  effectmanager.cpp  fight.cpp  gdextension_bindings.cpp  gdextension_registration.cpp  player.cpp  rng.cpp  trigger.cpp
test/: character.cpp  fight.cpp
